# churn-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  TASK.md  app.py  main.py  pyproject.toml  scratch.py  train.py
